--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.21.2",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "styled-components": "^6.1.19"
   }
 }
