--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
